<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingLeft="20dp"
                android:paddingRight="20dp">

                <TextView
                    android:id="@+id/player_1_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center"
                    android:padding="4dp"
                    android:text="@string/player1"
                    android:textColor="#616161"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/player_1_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:padding="4dp"
                    android:text="0"
                    android:textColor="#000000"
                    android:textSize="56sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center"
                    android:padding="4dp"
                    android:text="@string/sets"
                    android:textColor="#616161"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/player_1_sets"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:padding="4dp"
                    android:text="0"
                    android:textColor="#000000"
                    android:textSize="34sp"
                    android:textStyle="bold" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:onClick="addOneForPlayer1"
                    android:text="@string/point" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:onClick="switchServePlayer1"
                    android:text="@string/serve" />

                <TextView
                    android:id="@+id/player_1_serve"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:padding="4dp"
                    android:text=" "
                    android:textColor="#000000"
                    android:textSize="34sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="100dp"
                android:background="@color/colorLine"></View>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingLeft="20dp"
                android:paddingRight="20dp">

                <TextView
                    android:id="@+id/player_2_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center"
                    android:padding="4dp"
                    android:text="@string/player2"
                    android:textColor="#616161"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/player_2_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:padding="4dp"
                    android:text="0"
                    android:textColor="#000000"
                    android:textSize="56sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center"
                    android:padding="4dp"
                    android:text="@string/sets"
                    android:textColor="#616161"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/player_2_sets"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:padding="4dp"
                    android:text="0"
                    android:textColor="#000000"
                    android:textSize="34sp"
                    android:textStyle="bold" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:onClick="addOneForPlayer2"
                    android:text="@string/point" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:onClick="switchServePlayer2"
                    android:text="@string/serve" />

                <TextView
                    android:id="@+id/player_2_serve"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:padding="4dp"
                    android:text=" "
                    android:textColor="#000000"
                    android:textSize="34sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.002"
            android:paddingBottom="6dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:onClick="resetScore"
                android:text="@string/reset" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>